media/error_tc/error_247.txt
G:\SEM-7\ADF\FINAL PROJECT\AlgoBooth\media\source_codes/code_S44CNJF.cpp: In function 'int main()':
G:\SEM-7\ADF\FINAL PROJECT\AlgoBooth\media\source_codes/code_S44CNJF.cpp:8:1: error: expected ';' before '}' token
 }
 ^
